{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 7,
  "lineage": "8494c8ce-2bd2-38ff-21de-c077126f4e08",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271167918674:vpc/vpc-021f74e85e8068ce7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01227a92c4dc95fcc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-32dda54a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-021f74e85e8068ce7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-032304ccb63db563d",
            "owner_id": "271167918674",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myfirstec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0528a5175983e7f28",
            "arn": "arn:aws:ec2:us-west-2:271167918674:instance/i-0134911757753dc28",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0134911757753dc28",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pluralsight",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7f068ecdaffa328",
            "private_dns": "ip-172-31-9-215.us-west-2.compute.internal",
            "private_ip": "172.31.9.215",
            "public_dns": "ec2-54-201-130-203.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.130.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ee72550f077ef5eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "pluralsight-20201117092237136900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de13d1fb558ca4f1",
            "tags": {
              "Name": "PluralSightAnalyticsEngine"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db5d426247403af7"
            ]
          },
          "dependencies": [
            "aws_key_pair.pluralsight",
            "aws_security_group.pluralsight"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pluralsight",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271167918674:security-group/sg-0db5d426247403af7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0db5d426247403af7",
            "ingress": [],
            "name": "pluralsight-20201117092237136900000001",
            "name_prefix": "pluralsight-",
            "owner_id": "271167918674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "my description here"
            },
            "timeouts": null,
            "vpc_id": "vpc-021f74e85e8068ce7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2556516539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0db5d426247403af7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.pluralsight"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_local_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1119590708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db5d426247403af7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.pluralsight"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4096902273",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db5d426247403af7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.pluralsight"
          ]
        }
      ]
    }
  ]
}